k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: portfolio-backend
spec:
  type: ClusterIP
  selector:
    app: backend
  ports:
    - name: http
      port: 80
      targetPort: http
